src/test/deca/syntax/valid/test_parser_list_expr.deca
// Description:
//    Minimalistic program to test non-terminal list_expr.
//
// Results:
//    None
//
// History:
//    Created on 6/1/2025
{
    print("a","b" );
}
