src/test/deca/syntax/invalid/notYetImplemented/test_parser_bloc_not_closed.deca
// Description:
//    Minimalistic program to test the creation of a block missing a bracket.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car{
    int x = 42;
    boolean myMethod(int param, other_param){
        
    
}